create some elements IB start design

--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -5,3 +5,9 @@
   Created by msm72 on 21.08.15.
   Copyright (c) 2015 Monastyrskiy Sergey. All rights reserved.
 */
+
+
+// Russian
+"Settings"                                      =   "Настройки";
+"Back"                                          =   "Назад";
+"Version"                                       =   "Версия";
