--- a/HromadskyiPatrul/en.lproj/Localizable.strings
+++ b/HromadskyiPatrul/en.lproj/Localizable.strings
@@ -5,3 +5,9 @@
   Created by msm72 on 21.08.15.
   Copyright (c) 2015 Monastyrskiy Sergey. All rights reserved.
 */
+
+
+// English
+"Settings"                                      =   "Settings";
+"Back"                                          =   "Back";
+"Version"                                       =   "Version";
