--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -5,3 +5,9 @@
   Created by msm72 on 21.08.15.
   Copyright (c) 2015 Monastyrskiy Sergey. All rights reserved.
 */
+
+
+// Ukrainian
+"Settings"                                      =   "Налаштування";
+"Back"                                          =   "Назад";
+"Version"                                       =   "Версія";
