--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -11,3 +11,12 @@
 "Settings"                                      =   "Настройки";
 "Back"                                          =   "Назад";
 "Version"                                       =   "Версия";
+"Login"                                         =   "ВОЙТИ";
+"Public patrol"                                 =   "Общественный патруль";
+"About text 1"                                  =   "Увидел нарушителя правил дорожного движения?";
+"About text 2"                                  =   "Сфотографируй его и пришли нам фото.";
+"Alert error email title"                       =   "Ошибка";
+"Alert error email message"                     =   "Пожалуйста, введите корректный почтовый адрес.";
+"Alert error API title"                         =   "Ошибка";
+"Alert error API message"                       =   "Указанный почтовый адрес недействительный.";
+"Alert error button Ok"                         =   "Ok";
