add Collection View

--- a/HromadskyiPatrul/en.lproj/Localizable.strings
+++ b/HromadskyiPatrul/en.lproj/Localizable.strings
@@ -12,11 +12,19 @@
 "Back"                                          =   "Back";
 "Version"                                       =   "Version";
 "Login"                                         =   "LOGIN";
+"Logout"                                        =   "LOGOUT";
 "Public patrol"                                 =   "Public patrol";
 "About text 1"                                  =   "Saw the infringer of traffic regulations?";
 "About text 2"                                  =   "Take a photo of it and send us.";
 "Alert error email title"                       =   "Error";
+"Alert info title"                              =   "Info";
 "Alert error email message"                     =   "Please, enter a valid email address.";
 "Alert error API title"                         =   "Error";
 "Alert error API message"                       =   "Entered email is invalid.";
 "Alert error button Ok"                         =   "Ok";
+"Alert error video message"                     =   "Please, take a photo mode";
+"Switch title"                                  =   "Upload only WiFi";
+"Camera is not available"                       =   "Camera is not available.";
+"Photo is missing"                              =   "photo is missing.";
+"Photos 2-4 are missing"                        =   "photos are missing.";
+"Photos >5 are missing"                         =   "photos are missing.";
