--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -12,11 +12,19 @@
 "Back"                                          =   "Назад";
 "Version"                                       =   "Версия";
 "Login"                                         =   "ВОЙТИ";
+"Logout"                                        =   "ВЫЙТИ";
 "Public patrol"                                 =   "Общественный патруль";
 "About text 1"                                  =   "Увидел нарушителя правил дорожного движения?";
 "About text 2"                                  =   "Сфотографируй его и пришли нам фото.";
 "Alert error email title"                       =   "Ошибка";
+"Alert info title"                              =   "Инфо";
 "Alert error email message"                     =   "Пожалуйста, введите корректный почтовый адрес.";
 "Alert error API title"                         =   "Ошибка";
 "Alert error API message"                       =   "Указанный почтовый адрес недействительный.";
+"Alert error video message"                     =   "Пожалуйста, выберите режим фотографирования.";
 "Alert error button Ok"                         =   "Ok";
+"Switch title"                                  =   "Загружать только по WiFi";
+"Camera is not available"                       =   "Камера недоступна.";
+"Photo is missing"                              =   "фотография отсутствует.";
+"Photos 2-4 are missing"                        =   "фотографии отсутствуют.";
+"Photos >5 are missing"                         =   "фотографий отсутствуют.";
