--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -12,11 +12,19 @@
 "Back"                                          =   "Назад";
 "Version"                                       =   "Версія";
 "Login"                                         =   "УВІЙТИ";
+"Logout"                                        =   "ВИЙТИ";
 "Public patrol"                                 =   "Громадський патруль";
 "About text 1"                                  =   "Побачив порушника правил дорожнього руху?";
 "About text 2"                                  =   "Сфотографуй його та надішли нам фото.";
 "Alert error email title"                       =   "Помилка";
+"Alert info title"                              =   "Інфо";
 "Alert error email message"                     =   "Будь ласка, введіть коректну поштову адресу.";
 "Alert error API title"                         =   "Помилка";
 "Alert error API message"                       =   "Вказана поштова адреса не є дійсною.";
+"Alert error video message"                     =   "Будь ласка, оберіть режим фотографування.";
 "Alert error button Ok"                         =   "Ok";
+"Switch title"                                  =   "Завантажувати тільки по WiFi";
+"Camera is not available"                       =   "Камера недоступна.";
+"Photo is missing"                              =   "Фотографія відсутня.";
+"Photos 2-4 are missing"                        =   "фотографії відсутні.";
+"Photos >5 are missing"                         =   "фотографій відсутні.";
