add reachability & auto start upload photos

--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -19,23 +19,23 @@
 "About text 3"                                  =   "Країна має знати своїх «героїв»!";
 "Alert error email title"                       =   "Помилка";
 "Alert info title"                              =   "Інфо";
-"Alert error email message"                     =   "Будь ласка, \n введіть коректну поштову адресу.";
+"Alert error email message"                     =   "Будь ласка, \n введіть коректну поштову адресу";
 "Alert error API title"                         =   "Помилка";
-"Alert error API message"                       =   "Вказана поштова адреса не є дійсною.";
-"Alert error video message"                     =   "Будь ласка, \n оберіть режим фотографування.";
+"Alert error API message"                       =   "Вказана поштова адреса не є дійсною";
+"Alert error video message"                     =   "Будь ласка, \n оберіть режим фотографування";
 "Alert error button Ok"                         =   "Ок";
 "Alert error button Cancel"                     =   "Скасувати";
-"Alert error internet message"                  =   "Будь ласка, \n перевірте підключення до Інтернету.";
+"Alert error internet message"                  =   "Будь ласка, \n перевірте підключення до Інтернету";
 "Switch title"                                  =   "Завантажувати тільки по WiFi";
-"Camera is not available"                       =   "Камера недоступна.";
-"Photo is missing"                              =   "Фотографія відсутня.";
-"Photos 2-4 are missing"                        =   "фотографії відсутні.";
-"Photos >5 are missing"                         =   "фотографій відсутні.";
+"Camera is not available"                       =   "Камера недоступна";
+"Photo is missing"                              =   "Фотографія відсутня";
+"Photos 2-4 are missing"                        =   "фотографії відсутні";
+"Photos >5 are missing"                         =   "фотографій відсутні";
 
 "Alert error location title"                    =   "Помилка";
-"Alert error location message off"              =   "Сервіс розташування вимкнений.";
+"Alert error location message off"              =   "Сервіс визначення місцяположення вимкнено";
 "Alert error location title background"         =   "Фоновий режим...";
-"Alert error location message background"       =   "Сервіс розташування не працює у фоновому режимі.";
+"Alert error location message background"       =   "Сервіс визначення місця розташування не працює у фоновому режимі";
 
 "Open a Photo"                                  =   "Відкрити фото";
 "Remove a Photo"                                =   "Видалити фото";
