--- a/HromadskyiPatrul/en.lproj/Localizable.strings
+++ b/HromadskyiPatrul/en.lproj/Localizable.strings
@@ -19,18 +19,18 @@
 "About text 3"                                  =   "The country must know its «heroes»!";
 "Alert error email title"                       =   "Error";
 "Alert info title"                              =   "Info";
-"Alert error email message"                     =   "Please, enter a valid email address.";
+"Alert error email message"                     =   "Please, enter a valid email address";
 "Alert error API title"                         =   "Error";
-"Alert error API message"                       =   "Entered email is invalid.";
+"Alert error API message"                       =   "Entered email is invalid";
 "Alert error button Ok"                         =   "Ok";
 "Alert error video message"                     =   "Please, take a photo mode";
 "Alert error button Cancel"                     =   "Cancel";
-"Alert error internet message"                  =   "Please, check your Internet connection.";
+"Alert error internet message"                  =   "Please, check your Internet connection";
 "Switch title"                                  =   "Upload only WiFi";
-"Camera is not available"                       =   "Camera is not available.";
-"Photo is missing"                              =   "photo is missing.";
-"Photos 2-4 are missing"                        =   "photos are missing.";
-"Photos >5 are missing"                         =   "photos are missing.";
+"Camera is not available"                       =   "Camera is not available";
+"Photo is missing"                              =   "photo is missing";
+"Photos 2-4 are missing"                        =   "photos are missing";
+"Photos >5 are missing"                         =   "photos are missing";
 
 "Alert error location title"                    =   "Error";
 "Alert error location message off"              =   "Location services are off";
