add record 3 video snippets

--- a/HromadskyiPatrul/en.lproj/Localizable.strings
+++ b/HromadskyiPatrul/en.lproj/Localizable.strings
@@ -42,3 +42,8 @@
 "Photo preview"                                 =   "Photo preview";
 "Upload a Photo"                                =   "Upload a Photo";
 "Upload Photos"                                 =   "Upload Photos";
+"Take a Photo"                                  =   "Take a Photo";
+"Take a Video"                                  =   "Take a Video";
+
+"Start"                                         =   "START";
+"Attention"                                     =   "ATTENTION";
