--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -42,3 +42,8 @@
 "Photo preview"                                 =   "Фото превью";
 "Upload a Photo"                                =   "Загрузить одно фото";
 "Upload Photos"                                 =   "Загрузить все фото";
+"Take a Photo"                                  =   "Сделать фото";
+"Take a Video"                                  =   "Снять видео";
+
+"Start"                                         =   "СТАРТ";
+"Attention"                                     =   "НАРУШЕНИЕ";
