--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -42,3 +42,8 @@
 "Photo preview"                                 =   "Фото превью";
 "Upload a Photo"                                =   "Завантажити одне фото";
 "Upload Photos"                                 =   "Завантажити всі фото";
+"Take a Photo"                                  =   "Зробити фото";
+"Take a Video"                                  =   "Зняти відео";
+
+"Start"                                         =   "СТАРТ";
+"Attention"                                     =   "ПОРУШЕННЯ";
