--- a/HromadskyiPatrul/en.lproj/Localizable.strings
+++ b/HromadskyiPatrul/en.lproj/Localizable.strings
@@ -8,6 +8,7 @@
 
 
 // English
+"Cancel"                                        =   "Cancel";
 "Settings"                                      =   "Settings";
 "Back"                                          =   "Back";
 "Version"                                       =   "Version";
@@ -36,14 +37,18 @@
 "Alert error location message off"              =   "Location services are off";
 "Alert error location title background"         =   "To use background...";
 "Alert error location message background"       =   "Background location is not enabled";
+"Alert error saving video message"              =   "Video saving failed";
 
 "Open a Photo"                                  =   "Open a Photo";
+"Open a Video"                                  =   "Open a Video";
 "Remove a Photo"                                =   "Remove a Photo";
 "Photo preview"                                 =   "Photo preview";
 "Upload a Photo"                                =   "Upload a Photo";
+"Upload a Video"                                =   "Upload a Video";
 "Upload Photos"                                 =   "Upload Photos";
 "Take a Photo"                                  =   "Take a Photo";
 "Take a Video"                                  =   "Take a Video";
+"Merge & Save video"                            =   "Saving";
 
 "Start"                                         =   "START";
 "Attention"                                     =   "ATTENTION";
